--- a/contacto.html
+++ b/contacto.html
@@ -10,11 +10,12 @@
 <head>
     <meta charset="utf-8">
     <title>Contacto</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
 <body>
     <header>
-        <img class="logo" src="imagenes/logo.png" alt="Logotipo" width="176px" height="75px">
+        <img class="logo" src="imagenes/logo.png" alt="Logotipo">
 
     </header>
 
