--- a/hobbies.html
+++ b/hobbies.html
@@ -9,12 +9,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contacto</title>
+    <title>Hobbies</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
 <body>
     <header>
-        <img class="logo" src="imagenes/logo.png" alt="Logotipo" width="176px" height="75px">
+        <img class="logo" src="imagenes/logo.png" alt="Logotipo">
 
     </header>
 
