--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contacto</title>
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
@@ -24,13 +24,13 @@
         <hr>
         <ul class="main-links">
             <li><a href="landingPage.html">Inicio</a></li>
-            <li class="dropdown-li"><a href="landingPage.html">Sobre mí</a>
+            <li class="dropdown-li"><a href="landingPage.html">About me</a>
                 <ul class="dropdown">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="seriesPeliculas.html">Series Favoritas</a></li>
+                    <li><a href="seriesPeliculas.html">Favorite Series</a></li>
                 </ul>
             </li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="contacto.html">Contact me</a></li>
         </ul>
     </nav>
     <main>
@@ -41,38 +41,35 @@
             <div class="formulario">
                 <form action="mailto: karla.islas213090@potros.itson.edu.mx?subject=Contacto" method=post
                     enctype="text/plain">
-                    <h1><a name="fragmentoContacto">Contacto</a></h3>
+                    <h1><a name="fragmentoContacto">Contact me</a></h3>
                     <p>
-                        <label for="nombre" class="colocar_nombre">Nombre<span class="obligatorio">*</span></label>
-                        <input type="text" name="introducir_nombre" id="nombre" required="obligatorio"
-                            placeholder="Escribe tu nombre">
+                        <label for="nombre" class="colocar_nombre">Name<span class="obligatorio">*</span></label>
+                        <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="enter your name">
                     </p>
 
                     <p>
-                        <label for="email" class="colocar_email">Email<span class="obligatorio">*</span></label>
-                        <input type="email" name="introducir_email" id="email" required="obligatorio"
-                            placeholder="Escribe tu email">
+                        <label for="email" class="colocar_email">E-mail<span class="obligatorio">*</span></label>
+                        <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="enter you e-mail">
                     </p>
 
                     <p>
-                        <label for="telefono" class="colocar_telefono">Teléfono</label>
-                        <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+                        <label for="telefono" class="colocar_telefono">Phone</label>
+                        <input type="tel" name="introducir_telefono" id="telefono" placeholder="enter your phone number">
                     </p>
 
                     <p>
-                        <label for="asunto" class="colocar_asunto">Asunto<span class="obligatorio">*</span></label>
-                        <input type="text" name="introducir_asunto" id="assunto" required="obligatorio"
-                            placeholder="Escribe un asunto">
+                        <label for="asunto" class="colocar_asunto">Subject<span class="obligatorio">*</span></label>
+                        <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="enter a subject">
                     </p>
 
                     <p>
-                        <label for="mensaje" class="colocar_mensaje">Mensaje<span class="obligatorio">*</span></label>
+                        <label for="mensaje" class="colocar_mensaje">Message<span class="obligatorio">*</span></label>
                         <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio"
-                            placeholder="Escribe tu mensaje"></textarea>
+                            placeholder="enter a message"></textarea>
                     </p>
 
                     <button type="submit" name="enviar_formulario" id="enviar">
-                        <p>Enviar</p>
+                        <p>Send</p>
                     </button>
                 </form>
             </div>
@@ -81,8 +78,8 @@
 
     <footer>
         <hr />
-        <p align="center"><b>Autor:</b> Karla Ximena Islas Cruz</p>
-        <p align="center"><b>Email:</b> karla.islas213090@potros.itson.edu.mx</p>
+        <p align="center"><b>Author:</b> Karla Ximena Islas Cruz</p>
+        <p align="center"><b>E-mail:</b> karla.islas213090@potros.itson.edu.mx</p>
     </footer>
 </body>
 
