--- a/hobbies.html
+++ b/hobbies.html
@@ -23,37 +23,36 @@
         <br clear="left" />
         <hr>
         <ul class="main-links">
-            <li><a href="landingPage.html">Inicio</a></li>
-            <li class="dropdown-li"><a href="landingPage.html">Sobre mí</a>
+            <li><a href="landingPage.html">Home</a></li>
+            <li class="dropdown-li"><a href="landingPage.html">About me</a>
                 <ul class="dropdown">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="seriesPeliculas.html">Series Favoritas</a></li>
+                    <li><a href="seriesPeliculas.html">Favorite Series</a></li>
                 </ul>
             </li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="contacto.html">Contact me</a></li>
         </ul>
     </nav>
     <main>
         <br clear="left" />
         <hr>
         <div class="campoTexto">
-            <h1>Pasatiempos</h1>
+            <h1>Hobbies</h1>
             <ul type="circle">
-                <li><b>Leer:</b> cuando estaba en secundaria comenzó mi gusto por la lectura, aunque actualmente no le doy el 
-                mismo tiempo de antes por falta de tiempo, algunos de mis libros favoritos son El mapa de los Anhelos, Harry Potter
-                y El arte de ser nosotros.</li>
-                <li><b>Gimnasio:</b> a inicios del año pasado comencé a ir al gimnasio y poco a poco me ha ido gustando, actualmente 
-                trato de ir por las tardes o noches entre semana.</li>
-                <li><b>Nail Art:</b> en pandemia empecé a practicar la aplicación de extensiones y diseño de uñas, considero que con el paso
-                del tiempo he ido mejorando y en mis tiempos libres me gusta practicar conmigo misma.</li>
+                <li><b>Read:</b> When I was in high school my love for reading began, although nowadays I don't give it the same time 
+                as before due to lack of time, some of my favorite books are The Map of Longings, Harry Potter and The Art of Being Us.</li>
+                <li><b>Gym:</b> At the beginning of last year I started going to the gym and little by little I have been liking it, 
+                now I try to go in the afternoons or evenings.</li>
+                <li><b>Nail Art:</b> In pandemic I started practicing the application of extensions and nail design, I consider that 
+                with the passage of time I have been improving and in my free time I like to practice with myself. </li>
             </ul>
         </div>
     </main>
 
     <footer>
         <hr />
-        <p align="center"><b>Autor:</b> Karla Ximena Islas Cruz</p>
-        <p align="center"><b>Email:</b> karla.islas213090@potros.itson.edu.mx</p>
+        <p align="center"><b>Author:</b> Karla Ximena Islas Cruz</p>
+        <p align="center"><b>E-mail:</b> karla.islas213090@potros.itson.edu.mx</p>
     </footer>
 </body>
 
