--- a/landingPage.html
+++ b/landingPage.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Inicio</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
@@ -23,27 +23,27 @@
         <br clear="left" />
         <hr>
         <ul class="main-links">
-            <li><a href="landingPage.html">Inicio</a></li>
-            <li class="dropdown-li"><a href="landingPage.html">Sobre mí</a>
+            <li><a href="landingPage.html">Home</a></li>
+            <li class="dropdown-li"><a href="landingPage.html">About me</a>
                 <ul class="dropdown">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="seriesPeliculas.html">Series Favoritas</a></li>
+                    <li><a href="seriesPeliculas.html">Favorite Series</a></li>
                 </ul>
             </li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="contacto.html">Contact me</a></li>
         </ul>
     </nav>
 
     <main>
         <br clear="left" />
         <hr>
-        <img src="imagenes/portada.png" alt="Portada" width="1520" height="500" align="right" />
+        <img src="imagenes/portadaE.png" alt="Portada" width="1520" height="500" align="right" />
     </main>
 
     <footer>
         <hr />
-        <p align="center"><b>Autor:</b> Karla Ximena Islas Cruz</p>
-        <p align="center"><b>Email:</b> karla.islas213090@potros.itson.edu.mx</p>
+        <p align="center"><b>Author:</b> Karla Ximena Islas Cruz</p>
+        <p align="center"><b>E-mail:</b> karla.islas213090@potros.itson.edu.mx</p>
     </footer>
 
 </body>
