--- a/seriesPeliculas.html
+++ b/seriesPeliculas.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Series favoritas</title>
+    <title>Favorite series</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 </head>
 
@@ -23,14 +23,14 @@
         <br clear="left" />
         <hr>
         <ul class="main-links">
-            <li><a href="landingPage.html">Inicio</a></li>
-            <li class="dropdown-li"><a href="landingPage.html">Sobre mí</a>
+            <li><a href="landingPage.html">Home</a></li>
+            <li class="dropdown-li"><a href="landingPage.html">About me</a>
                 <ul class="dropdown">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="seriesPeliculas.html">Series Favoritas</a></li>
+                    <li><a href="seriesPeliculas.html">Favorite Series</a></li>
                 </ul>
             </li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="contacto.html">Contact me</a></li>
         </ul>
     </nav>
     <main>
@@ -38,7 +38,7 @@
         <hr>
         <div class="campoTexto">
 
-            <h2>Series favoritas</h2>
+            <h2>Favorite series</h2>
             <ul type="circle">
                 <li>Anne With an E</li>
                 <li>Stranger Things</li>
@@ -48,19 +48,19 @@
                 <li>Julie and the Phantoms</li>
             </ul>
 
-            <h3>Películas favoritas</h3>
+            <h3>Favorite movies</h3>
             <ul type="circle">
-                <li>La Tumba de las Luciérnagas</li>
-                <li>Violet Evergarden: La película</li>
-                <li>Enredados</li>
+                <li>Grave of the Fireflies</li>
+                <li>Violet Evergarden: The movie</li>
+                <li>Tangled</li>
             </ul>
         </div>
     </main>
 
     <footer>
         <hr />
-        <p align="center"><b>Autor:</b> Karla Ximena Islas Cruz</p>
-        <p align="center"><b>Email:</b> karla.islas213090@potros.itson.edu.mx</p>
+        <p align="center"><b>Author:</b> Karla Ximena Islas Cruz</p>
+        <p align="center"><b>E-mail:</b> karla.islas213090@potros.itson.edu.mx</p>
     </footer>
 </body>
 
